--- a/roles/deepseek/tasks/main.yml
+++ b/roles/deepseek/tasks/main.yml
@@ -66,13 +66,25 @@
 - name: Install Load Balancer
   import_tasks: install-lb.yml
   tags: apply, install
-  when: (( lb is defined and lb == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
+  when: ( lb is defined and lb == true ) and inventory_hostname in groups['master']
+
+
+- name: Install NGINX Ingress
+  import_tasks: install-ingress.yml
+  tags: install
+  when: (( ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
+
+
+- name: Unstall NGINX Ingress
+  import_tasks: uninstall-ingress.yml
+  tags: uninstall
+  when: (( ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Uninstall Load Balancer
   import_tasks: uninstall-lb.yml
   tags: uninstall
-  when: (( lb is defined and lb == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
+  when: ( lb is defined and lb == true ) and inventory_hostname in groups['master']
 
 
 - name: Destory Open Web UI
@@ -110,16 +122,5 @@
   tags: disable, uninstall
   when: (( repo is defined and repo == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
 
-
-#- name: Install NGINX Ingress
-#  import_tasks: install-ingress.yml
-#  tags: install
-#  when: (( ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
-#
-#
-#- name: Unstall NGINX Ingress
-#  import_tasks: uninstall-ingress.yml
-#  tags: uninstall
-#  when: (( ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
 
 
