--- a/roles/deepseek/tasks/main.yml
+++ b/roles/deepseek/tasks/main.yml
@@ -71,19 +71,19 @@
 
 - name: Install NGINX Ingress
   import_tasks: install-ingress.yml
-  tags: install
-  when: (( ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
+  tags: apply, install
+  when: (( apply, ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Unstall NGINX Ingress
   import_tasks: uninstall-ingress.yml
-  tags: uninstall
+  tags: delete, uninstall
   when: (( ingress is defined and ingress == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Uninstall Load Balancer
   import_tasks: uninstall-lb.yml
-  tags: uninstall
+  tags: delete, uninstall
   when: ( lb is defined and lb == true ) and inventory_hostname in groups['master']
 
 
@@ -121,6 +121,4 @@
   import_tasks: disable-helm-repo.yml
   tags: disable, uninstall
   when: (( repo is defined and repo == true ) or ( deepseek_all is defined and deepseek_all == true )) and inventory_hostname in groups['master']
-
-
 
