--- a/roles/rook/tasks/main.yml
+++ b/roles/rook/tasks/main.yml
@@ -6,85 +6,84 @@
 
 - name: Set Facts for Rook Ceph
   import_tasks: set-rook-facts.yml
-  tags:
-    - install
-    - uninstall
+  tags: enable, disable, install, uninstall, apply, clean, change, remove
 
 
 - name: Apply Kernel Parameters
   import_tasks: apply-rook-kernel-parameters.yml
-  tags: install
-  when: ( rook is defined and rook == true ) or ( rook_all is defined and rook_all == true )
+  tags: apply, install
+  when: ( param is defined and param == true ) or ( rook_all is defined and rook_all == true )
 
 
 - name: Enable Helm Repository
   import_tasks: enable-helm-repo.yml
-  tags: install
-  when: (( rook is defined and rook == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
+  tags: enable, install
+  when: (( repo is defined and repo == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Deploy Rook Ceph
   import_tasks: install-rook.yml
-  tags: install
-  when: (( rook is defined and rook == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
+  tags: deploy, install
+  when: (( ceph is defined and ceph == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Install Cert Manager
   import_tasks: install-cert-manager.yml
-  tags: install
-  when: _cm.install == true and inventory_hostname in groups['master']
+  tags: setup, install
+  when: ( cm is defined and cm == true ) and inventory_hostname in groups['master']
 
 
 - name: Install Ingress
   import_tasks: install-ingress.yml
-  tags: install
+  tags: setup, install
   when: (( ingress is defined and ingress == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Install Load Balancer
   import_tasks: install-lb.yml
-  tags: install
+  tags: setup, install
   when: (( lb is defined and lb == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Change Admin Password
   import_tasks: change-admin-password.yml
-  tags: install
+  tags: change, install
   when: (( password is defined and password == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Uninstall Load Balancer
   import_tasks: uninstall-lb.yml
-  tags: uninstall
+  tags: delete, uninstall
   when: (( lb is defined and lb == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Uninstall Ingress
   import_tasks: uninstall-ingress.yml
-  tags: uninstall
+  tags: delete, uninstall
   when: (( ingress is defined and ingress == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Uninstall Cert Manager
   import_tasks: uninstall-cert-manager.yml
   tags: uninstall
-  when: _cm.install == true and inventory_hostname in groups['master']
+  when: ( cm is defined and cm == true ) and inventory_hostname in groups['master']
 
 
 - name: Destroy Rook Ceph
   import_tasks: uninstall-rook.yml
-  tags: uninstall
-  when: (( rook is defined and rook == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
+  tags: delete, uninstall
+  when: (( ceph is defined and ceph == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Disable Helm Repository
   import_tasks: disable-helm-repo.yml
-  tags: uninstall
-  when: (( rook is defined and rook == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
+  tags: disable, uninstall
+  when: (( repo is defined and repo == true ) or ( rook_all is defined and rook_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Remove Kernel Parameters
   import_tasks: remove-rook-kernel-parameters.yml
-  tags: uninstall
-  when: ( rook is defined and rook == true ) or ( rook_all is defined and rook_all == true )
+  tags: remove, uninstall
+  when: ( param is defined and param == true ) or ( rook_all is defined and rook_all == true )
+
 
