--- a/roles/minio/tasks/disable-helm-repo.yml
+++ b/roles/minio/tasks/disable-helm-repo.yml
@@ -6,6 +6,7 @@
   ignore_errors: yes
   with_items:
     - jetstack
-    - bitnami
+    - minio
+    # - bitnami
 - debug: msg={{ remove_helm_repos }}
 
