--- a/roles/minio/tasks/main.yml
+++ b/roles/minio/tasks/main.yml
@@ -1,66 +1,88 @@
 ---
-- name: Check OS ( minio )
+- name: Check OS ( MinIO )
   fail: msg="Not a Red Hat or SUSE based System!"
   when: ansible_os_family != 'RedHat' or  ansible_os_family != 'CentOS' or  ansible_os_family != 'Rocky' or ansible_os_family != 'openSUSE Leap'
 
 
 - name: Set facts for Minio
   import_tasks: set-minio-facts.yml
-  tags:
-    - install
-    - uninstall
+  tags: install, uninstall, apply, deploy, destroy, create, delete, setup, remove, enable, disable, copy
 
 
 - name: Apply Kernel Parameters
   import_tasks: apply-minio-kernel-parameters.yml
-  tags: install
-  when: ( minio is defined and minio == true ) or ( minio_all is defined and minio_all == true )
+  tags: apply, install
+  when: ( param is defined and param == true ) or ( minio_all is defined and minio_all == true )
 
 
 - name: Enable Helm Repository
   import_tasks: enable-helm-repo.yml
-  tags: install
-  when: (( minio is defined and minio == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+  tags: enable, install
+  when: (( repo is defined and repo == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Install Kustomize
   import_tasks: install-kustomize.yml
-  tags: install
-  when: _kustomize.install == true and inventory_hostname in groups['master']
+  tags: setup, install
+  when: (( kustomize is defined and kustomize == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+
+
+- name: Copy Minio Template
+  import_tasks: copy-minio-temp.yml
+  tags: copy
+  when: ( temp is defined and temp == true ) and inventory_hostname in groups['master']
 
 
 - name: Deploy Minio
   import_tasks: install-minio.yml
-  tags: install
-  when: (( minio is defined and minio == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+  tags: setup, install
+  when: (( service is defined and service == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+
+
+- name: Create TLS Secret
+  import_tasks: create-tls-secret.yml
+  tags: create, install
+  when: (( cert is defined and cert == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Install Load Balancer
   import_tasks: install-lb.yml
-  tags: install
-  when: (( lb is defined and lb == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+  tags: setup, install
+  when: ( lb is defined and lb == true ) and inventory_hostname in groups['master']
+
+
+- name: Install NGINX Ingress
+  import_tasks: install-ingress.yml
+  tags: setup, install
+  when: (( ingress is defined and ingress == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+
+
+- name: Unstall NGINX Ingress
+  import_tasks: uninstall-ingress.yml
+  tags: remove, uninstall
+  when: (( ingress is defined and ingress == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Uninstall Load Balancer
   import_tasks: uninstall-lb.yml
-  tags: uninstall
-  when: (( lb is defined and lb == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+  tags: remove, uninstall
+  when: ( lb is defined and lb == true ) and inventory_hostname in groups['master']
 
 
 - name: Destroy Minio
   import_tasks: uninstall-minio.yml
-  tags: uninstall
-  when: (( minio is defined and minio == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+  tags: destroy, uninstall
+  when: (( service is defined and service == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Disable Helm Repository
   import_tasks: disable-helm-repo.yml
-  tags: uninstall
-  when: (( minio is defined and minio == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
+  tags: disable, uninstall
+  when: (( repo is defined and repo == true ) or ( minio_all is defined and minio_all == true )) and inventory_hostname in groups['master']
 
 
 - name: Remove Kernel Parameters
   import_tasks: remove-minio-kernel-parameters.yml
-  tags: uninstall
-  when: ( minio is defined and minio == true ) or ( minio_all is defined and minio_all == true )
+  tags: remove, delete, uninstall
+  when: ( param is defined and param == true ) or ( minio_all is defined and minio_all == true )
 
