--- a/roles/minio/tasks/uninstall-lb.yml
+++ b/roles/minio/tasks/uninstall-lb.yml
@@ -17,6 +17,7 @@
     chdir: "{{ base_path }}"
   with_items:
     - { svc: "minio", lb_ip_addr: "{{ _minio.lb.ip_addr }}" }
+    - { svc: "minio-console", lb_ip_addr: "192.168.1.218" }
 - debug: msg={{ delete_minio_lb }}
   ignore_errors: true
   when: print_debug == true
