--- a/roles/minio/vars/main.yml
+++ b/roles/minio/vars/main.yml
@@ -29,7 +29,7 @@ _minio:
     minor_version: 28
     patch_version: 0
     build_version:
-  hostname: "minio.jtest.pivotal.io"
+  hostname: "minio0.jtest.pivotal.io"
   service:
     metadata:
       name: minio-loadbalancer
@@ -38,7 +38,7 @@ _minio:
     metadata:
       name: minio-ingress
       namespace: minio
-    hostname: "minio.jtest.pivotal.io"
+    hostname: "minio0.jtest.pivotal.io"
   kernel_parameters:
     - "net.ipv4.neigh.default.gc_thresh1 = 0"   # For ARP Cache
     - "fs.inotify.max_user_instances=2280"
@@ -46,10 +46,31 @@ _minio:
   lb:
     install: true
     ip_addr: 192.168.1.219
-  replica: 8
+  replica: 4
 
 
 total_minio_containers: "{{ _minio.replica|int }}"
+
+
+_nginx:
+  ingress:
+    install: true
+    name: nginx-ingress
+    class_name: minio-ingress-class
+    namespace: "nginx-ingress"
+    major_version:
+    minor_version:
+    patch_version:
+    replica: 1
+    hostname: minio0
+    domain: jtest.pivotal.io
+    service: minio-console
+    ip_addr: "192.168.1.229"
+    port: 9001
+  k8s_ingress:
+    major_version: 3
+    minor_version: 0
+    patch_version: 2
 
 
 _helm:
@@ -59,4 +80,14 @@ _helm:
   patch_version:
   build_version:
 
+
+_ssl:
+  dir: "{{ base_path }}/minio-certs"
+  days: 3660
+  country: "KR"
+  state: "Seoul"
+  location: "Guro"
+  organization: "Pivotal"
+  common_name: "jest.pivotal.io"
+  email: "rokmc756@gmail.com"
 
