--- a/roles/directpv/tasks/install-directpv.yml
+++ b/roles/directpv/tasks/install-directpv.yml
@@ -1,12 +1,11 @@
-## Download DirectPV plugin.
 # https://min.io/docs/directpv/installation/
-
+#
 - name: Install DirectPV
   shell: |
     kubectl krew install directpv
   register: install_directpv
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ install_directpv }}
 
 
@@ -15,8 +14,8 @@
     kubectl directpv --version
   register: verify_directpv
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
-- debug: msg={{ install_directpv }}
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+- debug: msg={{ verify_directpv }}
 
 
 - name: Install DirectPV Driver
@@ -24,8 +23,18 @@
     kubectl directpv install
   register: install_directpv_driver
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ install_directpv_driver }}
+
+
+- name: Validate if DirectPV Containers are Running
+  shell: |
+    kubectl -n directpv get pod | sed 1d | awk '{print $3}' | grep -v Running | grep -v Evicted | wc -l
+  register: check_directpv_container
+  until: check_directpv_container.stdout|int == 0
+  retries: 100
+  delay: 10
+- debug: msg={{ check_directpv_container }}
 
 
 - name: List DirectPV Driver
@@ -33,7 +42,7 @@
     kubectl directpv discover --drives nvme0n{1...9}
   register: list_directpv_driver
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ list_directpv_driver }}
 
 
@@ -42,7 +51,7 @@
     kubectl directpv init --dangerous drives.yaml
   register: init_directpv_driver
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ init_directpv_driver }}
 
 
@@ -51,7 +60,7 @@
     kubectl directpv info
   register: verify_directpv_driver
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ verify_directpv_driver }}
 
 
@@ -60,7 +69,6 @@
     kubectl directpv list drives
   register: list_directpv_driver_formatted
   environment:
-    PATH: "{{ base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ _directpv.base_path }}/.krew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ list_directpv_driver_formatted }}
-
 
