--- a/roles/minio/tasks/remove-minio-kernel-parameters.yml
+++ b/roles/minio/tasks/remove-minio-kernel-parameters.yml
@@ -5,8 +5,9 @@
     state: absent
   register: remove_pv_dir
   with_sequence: start=0 end={{ total_minio_containers|int }}
+  when: _minio.directpv == false
 - debug: msg={{ remove_pv_dir }}
-  when: print_debug == true
+  when: print_debug == true and _minio.directpv == false
 
 
 - name: Remove Kernel Parameters for Minio
