--- a/roles/minio/tasks/uninstall-lb.yml
+++ b/roles/minio/tasks/uninstall-lb.yml
@@ -16,8 +16,8 @@
   args:
     chdir: "{{ base_path }}"
   with_items:
-    - { svc: "minio", lb_ip_addr: "{{ _minio.lb.ip_addr }}" }
-    - { svc: "minio-console", lb_ip_addr: "192.168.1.218" }
+    - { svc: "minio", lb_ip_addr: "{{ _minio.lb.s3_ip_addr }}" }
+    - { svc: "minio-console", lb_ip_addr: "{{ _minio.lb.console_ip_addr }}" }
 - debug: msg={{ delete_minio_lb }}
   ignore_errors: true
   when: print_debug == true
