--- a/roles/minio/tasks/enable-helm-repo.yml
+++ b/roles/minio/tasks/enable-helm-repo.yml
@@ -17,11 +17,10 @@
     /usr/local/bin/helm repo add {{ item.name }} {{ item.link }}
   register: add_helm_repos
   with_items:
-    - { name: 'jetstack', link: 'https://charts.jetstack.io' }
-    - { name: 'minio',    link: 'https://charts.min.io' }
+    - { name: 'jetstack',             link: 'https://charts.jetstack.io' }
+    - { name: 'minio',                link: 'https://charts.min.io' }
+    - { name: 'prometheus-community', link: 'https://prometheus-community.github.io/helm-charts' }
 - debug: msg={{ add_helm_repos }}
-    # - { name: 'bitnami',  link: 'https://charts.bitnami.com/bitnami' }
-    # - { name: 'minio',    link: 'https://helm.min.io' }
 
 
 - name: Update Helm Repo
