--- a/roles/minio/vars/main.yml
+++ b/roles/minio/vars/main.yml
@@ -1,11 +1,14 @@
+---
 base_path: /root
+
 
 _krew:
   base_path: "/root"
   download_url: "https://github.com/kubernetes-sigs/krew/releases/latest/download"
-  major_version:
-  minor_version:
-  patch_version:
+  major_version: 0
+  minor_version: 4
+  patch_version: 5
+
 
 _directpv:
   base_path: "/root"
@@ -14,23 +17,45 @@ _directpv:
   minor_version: 1
   patch_version: 5
 
-_minio:
-  install: true
-  directpv: true
+
+_prometheus:
   major_version:
   minor_version:
   patch_version:
-  build_version:
+  namespace: prometheus
+  replica: 1
+
+
+_minio:
+  install: true
+  directpv: true
+  major_version: 5
+  minor_version: 4
+  patch_version: 0
+  image_tag: "RELEASE.2024-12-18T13-15-44Z"
+  api_port: 9000
+  console_port: 9001
   admin_user: "admin"
   admin_password: "changeme"
   admin_email: "rokmc756@gmail.com"
+  root_user: "admin"
+  root_password: "changeme"
   enable_discovery_daemon: false
   clone_git: true
   nvme: true
   namespace: minio
-  storage_path: "/opt/minio-storage"
-  # storage_class: "minio-storage"
-  storage_class: "directpv-min-io"
+  metrics:
+    service_monitor:
+      enabled: true
+      include_node: true
+      public: true
+  persistence:
+    storage_path: "/opt/minio-storage"
+    enabled: "true"
+    storage_class: "directpv-min-io"
+    volume_name: ""
+    access_mode: "ReadWriteOnce"
+    size: "10Gi"
   k8s:
     major_version: 1
     minor_version: 28
@@ -52,8 +77,13 @@ _minio:
     - "fs.inotify.max_user_watches=755360"
   lb:
     install: true
-    ip_addr: 192.168.1.219
-  replica: 16
+    s3_ip_addr: "192.168.1.180"
+    console_ip_addr: "192.168.1.181"
+  resources:
+    cpu: 1
+    memory: 2Gi
+  replica: 8
+  pools: 1
 
 
 total_minio_containers: "{{ _minio.replica|int }}"
@@ -61,6 +91,7 @@ total_minio_containers: "{{ _minio.replica|int }}"
 
 _mc:
   download: false
+  image_tag: "RELEASE.2024-11-21T17-21-54Z"
   server_url: https://dl.minio.io/server/minio/release/linux-amd64/minio
   user_id: ""
   user: root
@@ -103,7 +134,7 @@ _nginx:
     hostname: minio0
     domain: jtest.pivotal.io
     service: minio-console
-    ip_addr: "192.168.1.229"
+    ip_addr: "192.168.1.179"
     port: 9001
   k8s_ingress:
     major_version: 3
